Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10358

QMenuBar signal triggered: one click emit two identical signals

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.3
    • 4.6.2
    • None
    • None
    • Windows Mobile 6.5, HTC HD2
    • 1e10fced4ceb59455b19f5e054b480f91aad273d

    Description

      Tested on Windows mobile and WindowsXP, on XP work fine.
      From subclass of QMainWindow called:
      connect(menuBar(), SIGNAL(triggered(QAction*)), this, SLOT(catchAct(QAction*)) );
      and slot catchAct call two times every click in menu.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            nightmare Alexander
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes