WinCE: QMenuBar::triggered(QAction*) was emitted too often

Calling QMenuPrivate::activateAction instead of QAction::activate makes
use of the internal recursion guard and fixes this problem.

Also emitting QMenuBar::triggered in the command-in-menu-bar case will
QAction::activate do for us.

Task-number: QTBUG-10358
Reviewed-by: thartman